# sputnik

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake
sputnik/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake
sputnik/depthwise/: cuda_depthwise.cu.cc
